# basa62-controller-rs

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  dependabot.yml  justfile
.github/: dependabot.yml
src/: controller.rs  crdgen.rs  example.rs  lib.rs  main.rs
yaml/: crd.yaml  instance-example.yaml
