[package]
name = "basa62-controller"
version = "0.1.0"
edition = "2021"
authors = ["Artem Basalaev <basa62.1996@gmail.com>"]
rust-version = "1.78"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"

[[bin]]
doc = false
name = "example"

[lib]
name = "basa62_controller"
path = "src/lib.rs"

[dependencies]
kube = { version = "0.93.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3.30"
anyhow = "1.0.86"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
schemars = "0.8.21"
log = "0.4.22"
tracing = "0.1.40"
either = "1.13.0"
garde = { version = "0.20.0", features = ["derive"] }
num-traits = "0.2.19"
