[package]
name = "basa62-controller"
version = "0.1.0"
edition = "2024"
authors = ["Artem Basalaev <basa62.1996@gmail.com>"]
rust-version = "1.88"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"

[[bin]]
doc = false
name = "example"

[lib]
name = "basa62_controller"
path = "src/lib.rs"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive", "kube-derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3.32"
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
schemars = "1.2.1"
log = "0.4.29"
tracing = "0.1.44"
either = "1.15.0"
garde = { version = "0.22.1", features = ["derive"] }
num-traits = "0.2.19"
